feat: 优化分页拦截器的动态方言和 count 查询流程
1. 增加 openRuntimeDbType 动态方言开关
- 默认关闭，继续复用 dialectImpl 缓存，避免单数据源场景重复识别方言
- 开启后优先根据当前数据源实时识别方言，适配 AbstractRoutingDataSource 等动态数据源场景
- 实时识别失败时回退使用 dialect 配置的默认方言

2. 优化 count 查询执行方式
- 参考 PageHelper 思路，将 count 查询改为通过 MyBatis Executor.query 执行
- 不再手动从 DataSource 获取连接，避免 count 查询和分页查询连接/事务上下文不一致
- 保留原 BoundSql 的 additionalParameters，兼容 foreach 等动态 SQL 参数

3. 增加 count 为 0 时的短路逻辑
- 当 total <= 0 时直接返回空列表
- 避免继续执行无意义的分页 SQL

4. 同步并补充数据库方言支持
- 补充 tiny-jdbc 中已有的数据库类型映射
- 新增 GaussDB 和 Trino/Presto 方言实现
- 调整 count SQL 结构为 SELECT COUNT(*) FROM (...) TEMP

5. 更新 README 使用说明
- 将依赖版本示例更新为 1.1.1
- 补充 openRuntimeDbType 在 XML 和 Spring Boot 配置中的使用示例
- 说明动态数据源场景下的方言识别和默认方言回退逻辑